# GA

./: .gitignore  False.csv  Final.ipynb  H4.ipynb  LICENSE  Multi_Objective_Particle_Swarm_Optimization.ipynb  Problems.py  README.md  pyproject.toml  test.ipynb  test.py
src/Problems/: __init__.py  dtlz.py  problem.py
src/differential_evolution/: __init__.py  differential_evolution.py
src/domain/: __init__.py
src/domain/cross_over/: __init__.py  icross_over.py
src/domain/encoding/: __init__.py  iencoding.py
src/domain/fitness/: __init__.py  ifitness.py
src/domain/mutations/: __init__.py  imutation.py
src/domain/penalty/: __init__.py  ipenalty.py
src/domain/population/: __init__.py  ipopulation.py
src/domain/selection/: __init__.py  iselection.py
src/genetic_algorithm/: __init__.py  genetic_alorithm.py
src/indicators/: __init__.py  energy.py  r2.py
src/mopso/: __init__.py  mopso.py
src/nsde/: NSDE.py  __init__.py
src/nsga/: NSGAII.py  __init__.py  nsga.py
src/repository/: __init__.py
src/repository/cross_over/: __init__.py
src/repository/cross_over/de_cross_over/: de_cross_over.py
src/repository/cross_over/simulated_binary/: simulated_binary.py
src/repository/cross_over/single_point_co/: single_point_co.py
src/repository/encoding/: __init__.py
src/repository/encoding/real_encoding/: real_encoding.py  real_encoding_mo.py
src/repository/mutation/: __init__.py
src/repository/penalty/: __init__.py
src/repository/population/: __init__.py
src/repository/population/binary/: binary.py
src/repository/selection/: __init__.py
(+13 files in other folders)
