[project]
name = "genetic_algorithm"
version = "0.0.1"
authors = [
  { name="Esteban Salazar", email="estebansalazar498@gmail.com" },
]
description = "package to create genetic algorithms"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Butis498/GA"